compi_tests_W24-main/hw5/tests/test42.out
lli: hw5/tests/temp_test42.ill.res:1:1: error: expected top-level entity
line 3: type mismatch
^
